# desktop_duplicate_cleaner

./: MANIFEST.in  README.md  desktop_duplicate_cleaner.py  pyproject.toml  setup.py
fedora_desktop_cleaner/: __init__.py
fedora_desktop_cleaner/__pycache__/: cleaner.py  cli.py  exceptions.py
